--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
     <head>
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8">
+        <meta name="title" content="sudoku.dyeoh.com">
+        <meta name="description" content="A Sudoku Solver">
+        <meta name="author" content="Desmond Yeoh">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:site_name" content="sudoku.dyeoh.com">
+        <meta property="og:title" content="sudoku.dyeoh.com" />
+        <meta property="og:description" content="A Sudoku Solver" />
+        <meta property="og:image" content="sudoku.png" />
+        <meta property="og:type" content="website" />
         <title>Sudoku Solver</title>
     </head>
     <body>
